Fix spacing under color picker

--- a/src/scss/_color-picker.scss
+++ b/src/scss/_color-picker.scss
@@ -13,3 +13,7 @@
 		padding: 5px;
 	}
 }
+
+.circle-picker {
+	margin-bottom: 0 !important;
+}
